tests/static_test/compile_fail/static_non_const_scalar_init.c
int seed = 1;

int main()
{
    static int x = seed;
    return x;
}
